--- a/Ecommerce/Ecomapp/templates/search.html
+++ b/Ecommerce/Ecomapp/templates/search.html
@@ -17,18 +17,20 @@
                 </div>
                 <p class="lead">{{search.description}}</p>
                 <div class="d-flex">
-                    <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                    <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                        <i class="bi-cart-fill me-1"></i>
-                        Add to cart
-                    </button>
+                    <form action="{% url 'cart' search.name %}" method="post">
+                        {% csrf_token %}
+                        <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
+                        <button class="btn btn-outline-dark flex-shrink-0" type="submit">
+                            <i class="bi-cart-fill me-1"></i>
+                            Add to cart
+                        </button>
+                    </form>
                 </div>
             </div>
         
         </div>
     </div>
 </section>
-<!-- Related items section-->
 <!-- Related items section-->
 <section class="py-5 bg-light">
     <div class="container px-4 px-lg-5 mt-5">
